--- a/app/views/register/new_user.html.slim
+++ b/app/views/register/new_user.html.slim
@@ -3,7 +3,7 @@ style html, body {background: url("http://www.topwallpaperphoto.com/wp-content/u
 = form_for :user, url: register_url, html: { id: "registerform" } do |f|
   fieldset
     main role="main" class="container"
-      div class="row"
+      .row.login-push
         div class="col-md-4 col-md-offset-4"
           form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
             legend class="page-header"
