--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,18 @@ h1 {
   padding: 0;
 }
 
+.space1{
+  position: absolute;
+  right: 455px;
+}
+
+.space2{
+  position: absolute;
+  right: 333px;
+}
+
+
+
 .blur{
   filter: blur(5px);
   -webkit-filter: blur(6px);
@@ -53,16 +65,31 @@ h1 {
   position: center;
 }
 
+.btn {
+    padding: 5px;
+    border-radius: 0;
+    border: none;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.btn-info{
+  font-size: 12px,
+}
+
 #totals_button{
   background-color: #999;
+  font-size: 12px,
 }
 
 #cost_button{
   background-color: #808080;
+  font-size: 12px,
 }
 
 #unit_button{
   background-color: #656566;
+  font-size: 12px,
 }
 
 .center-row{
@@ -169,14 +196,6 @@ legend {
     padding: 0;
     text-align: center;
     width: 100%;
-}
-
-.btn {
-    padding: 5px;
-    border-radius: 0;
-    border: none;
-    font-size: 21px;
-    margin-top: 20px;
 }
 
 .logout-link {
