--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,11 @@ body
         .pull-right
           = link_to "Log Out", logout_url, method: :delete, class: "btn btn-danger logout-link" if current_user
           = link_to "Register", register_url, class: "btn btn-primary logout-link" if !current_user
-        h1 class="navbar-brand" Drinkalculator
+        h1.navbar-brand style="color: white;" Drinkalculator
+        h1.navbar-brand.space1 style="color: #999;"
+          = link_to "add drinks", root_url, class: "" if current_user
+        h1.navbar-brand.space2 style="color: #999;"
+          = link_to "results", results_url, class: "" if current_user
 
     == yield
 
