--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -106,7 +106,8 @@ javascript:
     ykeys: ['value'],
     labels: ['Value'],
     barColors: ['#808080'],
-    hideHover: true
+    hideHover: true,
+    gridTextSize: 16
   });
 
   new Morris.Bar({
@@ -120,7 +121,8 @@ javascript:
     ykeys: ['value'],
     labels: ['Value'],
     barColors: ['#656566'],
-    hideHover: true
+    hideHover: true,
+    gridTextSize: 16
   });
 
 javascript:
