--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,13 @@ h1 {
   padding: 0;
 }
 
+
+/*---- NAV BAR ----*/
+
+.navbar-brand {
+  font-family: 'Revalia', cursive;
+}
+
 a:hover{
   text-decoration: none;
 }
@@ -40,8 +47,6 @@ a:hover{
   right: 333px;
 }
 
-
-
 .blur{
   filter: blur(5px);
   -webkit-filter: blur(6px);
@@ -50,6 +55,9 @@ a:hover{
   -ms-filter: blur(6px);
   filter: url(#blur);filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='6');
 }
+
+
+/*---- BUTTONS ----*/
 
 .click_notice{
 /*  font-size: 4em;
@@ -101,34 +109,7 @@ a:hover{
 }
 
 
-
-.deepshadow {
-    color: #e0dfdc;
-/*    background-color: #333;*/
-    letter-spacing: .1em;
-    text-shadow:
-      0 -1px 0 #fff,
-      0 1px 0 #2e2e2e,
-      0 2px 0 #2c2c2c,
-      0 3px 0 #2a2a2a,
-      0 4px 0 #282828,
-      0 5px 0 #262626,
-      0 6px 0 #242424,
-      0 7px 0 #222,
-      0 8px 0 #202020,
-      0 9px 0 #1e1e1e,
-      0 10px 0 #1c1c1c,
-      0 11px 0 #1a1a1a,
-      0 12px 0 #181818,
-      0 13px 0 #161616,
-      0 14px 0 #141414,
-      0 15px 0 #121212,
-      0 22px 30px rgba(0, 0, 0, 0.9);
-}
-
-.navbar-brand {
-  font-family: 'Revalia', cursive;
-}
+/*---- GENERAL ----*/
 
 .white_background{
   background: hsla(0, 0%, 100%, 0.9);
@@ -166,6 +147,7 @@ a:hover{
     margin: 100px 100px 100px 100px;
 }
 
+
 /*---- Results page ----*/
 
 .table-padding {
@@ -193,6 +175,9 @@ a:hover{
 .page-header {
   color: white;
 }
+
+
+/*---- PASSWORD ----*/
 
 .password-check{
   width: 30%;
