--- a/app/views/register/new_user.html.slim
+++ b/app/views/register/new_user.html.slim
@@ -4,26 +4,26 @@ style html, body {background: url("http://www.topwallpaperphoto.com/wp-content/u
   fieldset
     main role="main" class="container"
       .row.login-push
-        div class="col-md-4 col-md-offset-4"
+        div class="col-xs-12 col-md-offset-4"
           form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
             legend class="page-header"
               h2 Please Register
 
             .form-group
               / = f.label :email, class: "col-md-1 control-label"
-              div class="col-md-12"
+              div class="col-xs-36"
                 = f.text_field :email, class: "form-control input-md", placeholder: "Email Address", id: "user_email"
 
             .form-group
               / = f.label :password, class: "col-md-1 control-label"
-              div class="col-md-12"
+              div class="col-xs-36"
                 = f.password_field :password, class: "form-control input-md", placeholder: "Password", id: "user_password"
 
             .form-group
               / = f.label :password, class: "col-md-1 control-label"
-              div class="col-md-12"
+              div class="col-xs-36"
                 = f.password_field :password_confirmation, class: "form-control input-md", placeholder: "Confirm Password", id: "user_password"
 
             div class="form-group"
-              div class="col-md-12"
-                = f.submit "Register", class: "btn btn-success col-md-12"
+              div class="col-xs-36"
+                = f.submit "Register", class: "btn btn-success col-xs-36"
