--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -5,21 +5,19 @@ style html, body {background: url("http://www.sevva.hk/images/about/terrace/terr
   fieldset
     main role="main" class="container"
       .row.login-push
-        div class="col-xs-30 col-xs-offset-3"
+        div class="col-xs-30 col-md-20 col-xs-offset-3 col-md-offset-8"
           form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
-            legend class="page-header"
+            legend class="page-header col-xs-30 col-md-20 col-xs-offset-3 col-md-offset-8"
               h2 Please Sign in
 
             .form-group
-              / = f.label :email, class: "col-md-1 control-label"
-              div class="col-xs-36"
+              div class="col-xs-30 col-md-20 col-xs-offset-3 col-md-offset-8"
                 = f.text_field :email, class: "form-control input-md", placeholder: "Email Address", id: "user_email"
 
             .form-group
-              / = f.label :password, class: "col-md-1 control-label"
-              div class="col-xs-36"
+              div class="col-xs-30 col-md-20 col-xs-offset-3 col-md-offset-8"
                 = f.password_field :password, class: "form-control input-md", placeholder: "Password", id: "user_password"
 
             div class="form-group"
-              div class="col-xs-36"
+              div class="col-xs-30 col-md-20 col-xs-offset-3 col-md-offset-8"
                 = f.submit "Sign In", class: "btn btn-success col-xs-36"
