Tidied application HTML

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,8 +33,9 @@ h1 {
 
 /*---- NAV BAR ----*/
 
-.navbar-brand {
+h1.navbar-brand {
   font-family: 'Revalia', cursive;
+  color: white !important;
 }
 
 a:hover{
