--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,14 +118,16 @@ a:hover{
 
 .white_background{
   background: hsla(0, 0%, 100%, 0.9);
-  width: 1000px;
   margin-top: 100px;
+  margin-bottom: 50px;
   border-radius: 20px;
 }
 
 .welcome {
   text-align: center;
   font-size: 18px;
+  padding: 20px 50px 20px 50px;
+  margin: 50px;
 }
 
 .form-control {
@@ -162,7 +164,7 @@ a:hover{
 
 .container-padding {
     padding: 20px 50px 20px 50px;
-    margin: 100px 100px 100px 100px;
+    margin: 100px 100px 50px 100px;
 }
 
 
