--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,6 @@ h1 {
   padding: 0;
 }
 
-
 /*---- NAV BAR ----*/
 
 h1.navbar-brand {
@@ -47,24 +46,12 @@ a:hover{
   right: 333px;
 }
 
-.blur{
-  filter: blur(5px);
-  -webkit-filter: blur(6px);
-  -moz-filter: blur(6px);
-  -o-filter: blur(6px);
-  -ms-filter: blur(6px);
-  filter: url(#blur);filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='6');
-}
-
 
 /*---- BUTTONS ----*/
 
 .click_notice{
-/*  font-size: 4em;
-  color: white;*/
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   font-size: 75px;
-/*  padding: 80px 50px;*/
   text-align: center;
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
@@ -78,11 +65,11 @@ a:hover{
 }
 
 .btn {
-    padding: 5px;
-    border-radius: 0;
-    border: none;
-    font-size: 18px;
-    margin-top: 20px;
+  padding: 5px;
+  border-radius: 0;
+  border: none;
+  font-size: 18px;
+  margin-top: 20px;
 }
 
 .btn-info{
@@ -111,6 +98,38 @@ a:hover{
 
 /*---- GENERAL ----*/
 
+.form-control {
+  border: 1px solid #D6D6D6;
+  border-radius: 0;
+  box-shadow: none;
+  height: 40px;
+  padding: 6px 15px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.form-group{
+  margin-top: 15px;
+}
+
+.hidden-fields{
+  margin-top: 130px;
+  text-align: left;
+}
+
+.control-label {
+  color: white;
+  font-weight: normal;
+}
+
+.container-padding {
+  padding: 20px 50px 20px 50px;
+  margin: 100px 100px 50px 100px;
+}
+
+
+/*---- INDEX ----*/
+
 .white_background{
   background: hsla(0, 0%, 100%, 0.9);
   margin-top: 100px;
@@ -125,41 +144,12 @@ a:hover{
   margin: 50px;
 }
 
-.form-control {
-    border: 1px solid #D6D6D6;
-    border-radius: 0;
-    box-shadow: none;
-    height: 40px;
-    padding: 6px 15px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.form-group{
-  margin-top: 15px;
-}
-
-.hidden-fields{
-  margin-top: 130px;
-  text-align: left;
-}
-
 .advanced{
   text-align: right;
   color: blue;
   padding-right: 14px;
   padding-top: 160px;
   cursor: pointer;
-}
-
-.control-label {
-  color: white;
-  font-weight: normal;
-}
-
-.container-padding {
-    padding: 20px 50px 20px 50px;
-    margin: 100px 100px 50px 100px;
 }
 
 
@@ -196,6 +186,15 @@ a:hover{
   font-size: 18px;
 }
 
+.blur{
+  filter: blur(5px);
+  -webkit-filter: blur(6px);
+  -moz-filter: blur(6px);
+  -o-filter: blur(6px);
+  -ms-filter: blur(6px);
+  filter: url(#blur);filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='6');
+}
+
 
 /*---- PASSWORD ----*/
 
@@ -205,15 +204,15 @@ a:hover{
 }
 
 legend {
-    border: medium none;
-    color: #7F7F7F;
-    display: block;
-    font-size: 20px;
-    line-height: inherit;
-    margin-bottom: 15px;
-    padding: 0;
-    text-align: center;
-    width: 100%;
+  border: medium none;
+  color: #7F7F7F;
+  display: block;
+  font-size: 20px;
+  line-height: inherit;
+  margin-bottom: 15px;
+  padding: 0;
+  text-align: center;
+  width: 100%;
 }
 
 .logout-link {
@@ -253,6 +252,9 @@ input {
 tr.active {
   font-style: italic;
 }
+
+
+/*---- PASSWORD RESET COLOURS ----*/
 
 /*
  *= require_self
@@ -307,9 +309,6 @@ $bgnd-head-foot:       hsla(0, 0%, 97.2549%, 1);     /* very light gray  */
 $height-header: 50px;
 $height-footer: 40px;
 
-/* Sticky footer styles
--------------------------------------------------- */
-
 
 #registrant-email {
   font-size: 1.4em;
@@ -348,17 +347,15 @@ $height-footer: 40px;
 }
 
 
-/*FOOTER*/
-/* Wrapper for page content to push down footer */
+/*---- FOOTER ----*/
+
 #wrap {
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  /* Negative indent footer by it's height */
   margin: 0 auto -40px;
 }
 
-/* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
   #footer {
     margin-left: -20px;
