--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,10 +19,11 @@ body
           = link_to "Log Out", logout_url, method: :delete, class: "btn btn-danger logout-link" if current_user
           = link_to "Register", register_url, class: "btn btn-primary logout-link" if !current_user
         h1.navbar-brand Drinkalculator
-        h1.navbar-brand.space1
-          = link_to "add drinks", root_url, class: "" if current_user
-        h1.navbar-brand.space2
-          = link_to "results", results_url, class: "" if current_user
+        .row
+          h1.navbar-brand.col-xs-6.col-xs-offset-1.pull-right
+            = link_to "add drinks", root_url, class: "" if current_user
+          h1.navbar-brand.col-xs-4.pull-right
+            = link_to "results", results_url, class: "" if current_user
 
     == yield
 
